--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
 		"@sveltejs/kit": "^1.20.4",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
-		"@vite-pwa/sveltekit": "^0.2.7",
 		"autoprefixer": "^10.4.15",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -39,8 +38,13 @@
 	"type": "module",
 	"dependencies": {
 		"@types/socket.io-client": "^1.4.32",
+		"@types/web-push": "^3.6.1",
+		"@vite-pwa/sveltekit": "^0.2.7",
 		"firebase": "^10.4.0",
 		"geolocation-utils": "^1.2.5",
-		"socket.io-client": "^2.4.0"
+		"kolorist": "^1.8.0",
+		"socket.io-client": "^2.4.0",
+		"vite-plugin-pwa": "^0.16.5",
+		"web-push": "^3.6.6"
 	}
 }
